2003-09-15  Naofumi Yasufuku  <naofumi@users.sourceforge.net>

	* ==== Released 1.0.4 ====

	* configure.in: Version 1.0.4, Binary age 4, interface age 2.

2003-09-14  Naofumi Yasufuku  <naofumi@users.sourceforge.net>

	* examples/low-level.c (realize, configure_event, expose_event):
	make_current() -> gl_begin().

2003-09-13  Naofumi Yasufuku  <naofumi@users.sourceforge.net>

	* examples/simple-mixed.c (expose_event): 
	* examples/pixmap-mixed.c (configure_event): Use
	widget->style->black_gc to draw GDK rectangle.

	* examples/pixmap-mixed.c (configure_event): 
	* examples/pixmap.c (configure_event): Don't need to pass
	depth argument.

2003-09-12  Naofumi Yasufuku  <naofumi@users.sourceforge.net>

	* gtk/gtkglwidget.c (gtk_widget_set_gl_capability) 
	(gl_widget_private_destroy): Own reference to private->share_list.

2003-09-09  Naofumi Yasufuku  <naofumi@users.sourceforge.net>

	* gtk/gtkglwidget.c (gtk_widget_set_gl_capability): Check whether
	given widget has own GdkWindow. GL widget's "realize" signal
	handler should be connected by g_signal_connect() instead of
	g_signal_connect_after().

2003-09-09  Naofumi Yasufuku  <naofumi@users.sourceforge.net>

	* configure.in (AC_CONFIG_FILES): 
	* examples/Makefile.am (DIST_SUBDIRS): 
	* examples/glade/Makefile.am: 
	* examples/glade/README: 
	* examples/glade/simple.glade: 
	* examples/glade/simple.c: 
	* examples/glade/share-lists.glade: 
	* examples/glade/share-lists.c: Added new libglade examples.

2003-09-04  Alif Wahid  <awah005@users.sourceforge.net>

	* AUTHORS:
	* examples/coolwave2.c
	* examples/Makefile.am:
	* examples/Makefile.mingw:
	* examples/Makefile.msc: Added new example coolwave2.c to 
	test how well a Gtk window behaves in fullscreen mode
	when containing an OpenGL capable drawable. Use the
	popup menu items to change between fullscreen and normal
	mode. Otherwise this is identical to the coolwave.c program.

2003-08-31  Naofumi Yasufuku  <naofumi@users.sourceforge.net>
