@@ -1,3 +1,10 @@
+2003-11-06  Naofumi Yasufuku  <naofumi@users.sourceforge.net>
+
+	* gtk/gtkglwidget.c (gtk_gl_widget_size_allocate) 
+	(gtk_gl_widget_realize): Added "size_allocate" signal handler. It
+	synchronizes OpenGL rendering pipeline, and reduces flickering on
+	resizing X window. (Reported by Mathieu Lacage. Thanks!)
+
 2003-09-15  Naofumi Yasufuku  <naofumi@users.sourceforge.net>
 
 	* ==== Released 1.0.4 ====
